--- a/project1/templates/home.html
+++ b/project1/templates/home.html
@@ -18,9 +18,15 @@
    {% placeholder "recently completed" %}
 </div>
 </section>
+
 <section id="third" data-magellan-target="third">
+    <div class="grid-x grid-padding-x">
+    
     {% placeholder "updates" %}
+</div>
+
 </section>
+
 </div>
 </div>
 </div>
